reafctor: adopt SW360Utils to PMD warnings
Signed-off-by: Maximilian Huber <external.maximilian.huber2@bosch-si.com>