@@ -11,9 +11,6 @@
  */
 package org.eclipse.sw360.exporter.utils;
 
-import com.google.common.base.Function;
-import com.google.common.base.Predicate;
-import com.google.common.collect.*;
 import org.apache.commons.csv.CSVRecord;
 import org.apache.thrift.TException;
 import org.eclipse.sw360.datahandler.common.CommonUtils;
@@ -27,7 +24,10 @@ import org.jetbrains.annotations.NotNull;
 
 import java.io.InputStream;
 import java.util.*;
+import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.eclipse.sw360.exporter.utils.ConvertRecord.putToTodos;
 
@@ -38,100 +38,56 @@ import static org.eclipse.sw360.exporter.utils.ConvertRecord.putToTodos;
 public class TypeMappings {
 
     @NotNull
-    public static <T> Predicate<T> containedWithAddIn(final Set<T> knownIds) {
-        return new Predicate<T>() {
-            @Override
-            public boolean apply(T input) {
-                return knownIds.add(input);
-            }
-        };
+    private static <T> Predicate<T> containedWithAddIn(final Set<T> knownIds) {
+        return knownIds::add;
     }
 
-    public static <T, U> ImmutableList<T> getElementsWithIdentifiersNotInMap(Function<T, U> getIdentifier, Map<U, T> theMap, List<T> candidates) {
-        return FluentIterable.from(candidates).filter(
-                CommonUtils.afterFunction(getIdentifier::apply).is(containedWithAddIn(Sets.newHashSet(theMap.keySet()))::apply)::apply).toList();
-    }
-
-    public static <T, U> ImmutableList<T> getElementsWithIdentifiersNotInSet(Function<T, U> getIdentifier, Set<U> theSet, List<T> candidates) {
-        return FluentIterable.from(candidates).filter(
-                CommonUtils.afterFunction(getIdentifier::apply).is(containedWithAddIn(theSet)::apply)::apply).toList();
+    private static <T, U> List<T> getElementsWithIdentifiersNotInMap(Function<T, U> getIdentifier, Map<U, T> theMap, List<T> candidates) {
+        Set<U> keysFromTheMap = theMap.keySet();
+        return candidates.stream()
+                .filter(a -> (containedWithAddIn(keysFromTheMap)).test(getIdentifier.apply(a)))
+                .collect(Collectors.toList());
     }
 
     @NotNull
-    public static Function<License, String> getLicenseIdentifier() {
-        return new Function<License, String>() {
-            @Override
-            public String apply(License input) {
-                return input.getId();
-            }
-        };
+    private static Function<Todo, Integer> getTodoIdentifier() {
+        return todo -> -1;
     }
 
     @NotNull
-    public static Function<Todo, Integer> getTodoIdentifier() {
-        return new Function<Todo, Integer>() {
-            @Override
-            public Integer apply(Todo input) {
-                return -1;
-            }
-        };
+    private static Function<Obligation, Integer> getObligationIdentifier() {
+        return o -> -1;
     }
 
     @NotNull
-    public static Function<Obligation, Integer> getObligationIdentifier() {
-        return new Function<Obligation, Integer>() {
-            @Override
-            public Integer apply(Obligation input) {
-                return input.getObligationId();
-            }
-        };
+    private static Function<LicenseType, Integer> getLicenseTypeIdentifier() {
+        return LicenseType::getLicenseTypeId;
     }
 
     @NotNull
-    public static Function<LicenseType, Integer> getLicenseTypeIdentifier() {
-        return new Function<LicenseType, Integer>() {
-            @Override
-            public Integer apply(LicenseType input) {
-                return input.getLicenseTypeId();
-            }
-        };
+    private static Function<RiskCategory, Integer> getRiskCategoryIdentifier() {
+        return RiskCategory::getRiskCategoryId;
     }
 
     @NotNull
-    public static Function<RiskCategory, Integer> getRiskCategoryIdentifier() {
-        return new Function<RiskCategory, Integer>() {
-            @Override
-            public Integer apply(RiskCategory input) {
-                return input.getRiskCategoryId();
-            }
-        };
-    }
-
-    @NotNull
-    public static Function<Risk, Integer> getRiskIdentifier() {
-        return new Function<Risk, Integer>() {
-            @Override
-            public Integer apply(Risk input) {
-                return input.getRiskId();
-            }
-        };
+    private static Function<Risk, Integer> getRiskIdentifier() {
+        return Risk::getRiskId;
     }
 
     @SuppressWarnings("unchecked")
-    public static <T, U> Function<T, U> getIdentifier(Class<T> clazz, @SuppressWarnings("unused") Class<U> uClass /*used to infer type*/) throws SW360Exception {
+    private static <T, U> Optional<Function<T, U>> getIdentifier(Class<T> clazz, @SuppressWarnings("unused") Class<U> uClass /*used to infer type*/) {
         if (clazz.equals(LicenseType.class)) {
-            return (Function<T, U>) getLicenseTypeIdentifier();
+            return Optional.of((Function<T, U>) getLicenseTypeIdentifier());
         } else if (clazz.equals(Obligation.class)) {
-            return (Function<T, U>) getObligationIdentifier();
+            return Optional.of((Function<T, U>) getObligationIdentifier());
         } else if (clazz.equals(RiskCategory.class)) {
-            return (Function<T, U>) getRiskCategoryIdentifier();
+            return Optional.of((Function<T, U>) getRiskCategoryIdentifier());
         }
-
-        throw new SW360Exception("Unknown Type requested");
+        return Optional.empty();
     }
 
     @SuppressWarnings("unchecked")
-    public static <T> List<T> getAllFromDB(LicenseService.Iface licenseClient, Class<T> clazz) throws TException {
+    private static <T> List<T> getAllFromDB(LicenseService.Iface licenseClient, Class<T> clazz) throws TException {
         if (clazz.equals(LicenseType.class)) {
             return (List<T>) licenseClient.getLicenseTypes();
         } else if (clazz.equals(Obligation.class)) {
@@ -143,7 +99,7 @@ public class TypeMappings {
     }
 
     @SuppressWarnings("unchecked")
-    public static <T> List<T> simpleConvert(List<CSVRecord> records, Class<T> clazz) throws SW360Exception {
+    private static <T> List<T> simpleConvert(List<CSVRecord> records, Class<T> clazz) throws SW360Exception {
         if (clazz.equals(LicenseType.class)) {
             return (List<T>) ConvertRecord.convertLicenseTypes(records);
         } else if (clazz.equals(Obligation.class)) {
@@ -155,7 +111,7 @@ public class TypeMappings {
     }
 
     @SuppressWarnings("unchecked")
-    public static <T> List<T> addAlltoDB(LicenseService.Iface licenseClient, Class<T> clazz, List<T> candidates, User user) throws TException {
+    private static <T> List<T> addAlltoDB(LicenseService.Iface licenseClient, Class<T> clazz, List<T> candidates, User user) throws TException {
         if (candidates != null && !candidates.isEmpty()) {
             if (clazz.equals(LicenseType.class)) {
                 return (List<T>) licenseClient.addLicenseTypes((List<LicenseType>) candidates, user);
@@ -170,18 +126,28 @@ public class TypeMappings {
 
     @NotNull
     public static <T, U> Map<U, T> getIdentifierToTypeMapAndWriteMissingToDatabase(LicenseService.Iface licenseClient, InputStream in, Class<T> clazz, Class<U> uClass, User user) throws TException {
-        Map<U, T> typeMap;
         List<CSVRecord> records = ImportCSV.readAsCSVRecords(in);
         final List<T> recordsToAdd = simpleConvert(records, clazz);
         final List<T> fullList = CommonUtils.nullToEmptyList(getAllFromDB(licenseClient, clazz));
-        typeMap = Maps.newHashMap(Maps.uniqueIndex(fullList, getIdentifier(clazz, uClass)));
-        final ImmutableList<T> filteredList = getElementsWithIdentifiersNotInMap(getIdentifier(clazz, uClass), typeMap, recordsToAdd);
+
+        final Optional<Function<T, U>> getIdentifier = getIdentifier(clazz, uClass);
+        if (! getIdentifier.isPresent()) {
+            return Collections.emptyMap();
+        }
+
+        Map<U, T> typeMap = fullList.stream()
+                .collect(Collectors.toMap(f -> getIdentifier.get().apply(f), Function.identity()));
+        final List<T> filteredList = getElementsWithIdentifiersNotInMap(getIdentifier.get(), typeMap, recordsToAdd);
         List<T> added = null;
         if (filteredList.size() > 0) {
             added = addAlltoDB(licenseClient, clazz, filteredList, user);
         }
-        if (added != null)
-            typeMap.putAll(Maps.uniqueIndex(added, getIdentifier(clazz, uClass)));
+        if (added != null) {
+            final Map<U, T> mapFromAdded = added.stream()
+                    .collect(Collectors.toMap(f -> getIdentifier.get().apply(f), Function.identity()));
+            return Stream.concat(typeMap.entrySet().stream(), mapFromAdded.entrySet().stream())
+                    .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+        }
         return typeMap;
     }
 
@@ -190,14 +156,19 @@ public class TypeMappings {
         List<CSVRecord> riskRecords = ImportCSV.readAsCSVRecords(in);
         final List<Risk> risksToAdd = ConvertRecord.convertRisks(riskRecords, riskCategoryMap);
         final List<Risk> risks = CommonUtils.nullToEmptyList(licenseClient.getRisks());
-        Map<Integer, Risk> riskMap = Maps.newHashMap(Maps.uniqueIndex(risks, getRiskIdentifier()));
-        final ImmutableList<Risk> filteredList = getElementsWithIdentifiersNotInMap(getRiskIdentifier(), riskMap, risksToAdd);
+        Map<Integer, Risk> riskMap = risks.stream()
+                .collect(Collectors.toMap(getRiskIdentifier(), Function.identity()));
+        final List<Risk> filteredList = getElementsWithIdentifiersNotInMap(getRiskIdentifier(), riskMap, risksToAdd);
         List<Risk> addedRisks = null;
         if (filteredList.size() > 0) {
             addedRisks = licenseClient.addRisks(filteredList, user);
         }
-        if (addedRisks != null)
-            riskMap.putAll(Maps.uniqueIndex(addedRisks, getRiskIdentifier()));
+        if (addedRisks != null){
+            final Map<Integer, Risk> mapFromAdded = addedRisks.stream()
+                    .collect(Collectors.toMap(getRiskIdentifier(), Function.identity()));
+            return Stream.concat(riskMap.entrySet().stream(), mapFromAdded.entrySet().stream())
+                    .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+        }
         return riskMap;
     }
 
@@ -205,17 +176,20 @@ public class TypeMappings {
     public static Map<Integer, Todo> getTodoMapAndWriteMissingToDatabase(LicenseService.Iface licenseClient, Map<Integer, Obligation> obligationMap, Map<Integer, Set<Integer>> obligationTodoMapping, InputStream in, User user) throws TException {
         List<CSVRecord> todoRecords = ImportCSV.readAsCSVRecords(in);
         final List<Todo> todos = CommonUtils.nullToEmptyList(licenseClient.getTodos());
-        Map<Integer, Todo> todoMap = Maps.newHashMap(Maps.uniqueIndex(todos, getTodoIdentifier()));
+        Map<Integer, Todo> todoMap = todos.stream()
+                .collect(Collectors.toMap(getTodoIdentifier(), Function.identity()));
         final List<Todo> todosToAdd = ConvertRecord.convertTodos(todoRecords);
-        final ImmutableList<Todo> filteredTodos = getElementsWithIdentifiersNotInMap(getTodoIdentifier(), todoMap, todosToAdd);
-        final ImmutableMap<Integer, Todo> filteredMap = Maps.uniqueIndex(filteredTodos, getTodoIdentifier());
+        final List<Todo> filteredTodos = getElementsWithIdentifiersNotInMap(getTodoIdentifier(), todoMap, todosToAdd);
+        final Map<Integer, Todo> filteredMap = filteredTodos.stream()
+                .collect(Collectors.toMap(getTodoIdentifier(), Function.identity()));
         putToTodos(obligationMap, filteredMap, obligationTodoMapping);
         //insertCustomProperties
 
         if (filteredTodos.size() > 0) {
             final List<Todo> addedTodos = licenseClient.addTodos(filteredTodos, user);
             if (addedTodos != null) {
-                final ImmutableMap<Integer, Todo> addedTodoMap = Maps.uniqueIndex(addedTodos, getTodoIdentifier());
+                final Map<Integer, Todo> addedTodoMap = addedTodos.stream()
+                        .collect(Collectors.toMap(f -> getTodoIdentifier().apply(f), Function.identity()));
                 todoMap.putAll(addedTodoMap);
             }
         }
@@ -236,9 +210,10 @@ public class TypeMappings {
         }
 
         if (todoMap.values().size() > 0) {
-            final List<Todo> addedTodos = licenseClient.addTodos(todoMap.values().stream().collect(Collectors.toList()), user);
+            final List<Todo> addedTodos = licenseClient.addTodos(new ArrayList<>(todoMap.values()), user);
             if (addedTodos != null) {
-                final ImmutableMap<Integer, Todo> addedTodoMap = Maps.uniqueIndex(addedTodos, getTodoIdentifier());
+                final Map<Integer, Todo> addedTodoMap = addedTodos.stream()
+                        .collect(Collectors.toMap(f -> getTodoIdentifier().apply(f), Function.identity()));
                 todoMap.putAll(addedTodoMap);
             }
         }
@@ -249,15 +224,10 @@ public class TypeMappings {
         List<CSVRecord> records = ImportCSV.readAsCSVRecords(inputStream);
         Optional<CustomProperties> dbCustomProperties = CommonUtils.wrapThriftOptionalReplacement(licenseClient.getCustomProperties(SW360Constants.TYPE_TODO));
         CustomProperties customProperties;
-        if (!dbCustomProperties.isPresent()) {
-            customProperties = new CustomProperties().setDocumentType(SW360Constants.TYPE_TODO);
-        } else {
-            customProperties = dbCustomProperties.get();
-        }
+        customProperties = dbCustomProperties.orElseGet(() -> new CustomProperties().setDocumentType(SW360Constants.TYPE_TODO));
         Map<String, Set<String>> propertyToValuesToAdd = ConvertRecord.convertCustomProperties(records);
         customProperties.setPropertyToValues(CommonUtils.mergeMapIntoMap(propertyToValuesToAdd, customProperties.getPropertyToValues()));
         licenseClient.updateCustomProperties(customProperties, user);
-        Map<Integer, ConvertRecord.PropertyWithValue> propertiesWithValuesById = ConvertRecord.convertCustomPropertiesById(records);
-        return propertiesWithValuesById;
+        return ConvertRecord.convertCustomPropertiesById(records);
     }
 }
